# quarto-multi-engine-using-embed-example

./: .gitattributes  README.md  _quarto.yml  index.qmd  julia-code-using-julia-engine.qmd  pyproject.toml  python-code-using-jupyter-python3-engine.qmd  quarto-multi-engine-using-embed-example.Rproj  setup.sh  stata-code-using-jupyter-nbstata-engine.qmd  test.qmd
docs/: index.html
